--- a/.travis.yml
+++ b/.travis.yml
@@ -57,5 +57,5 @@ before_script:
   - bash /tmp/bats-repo/install.sh /tmp/bats
 
 script:
-  - if command -v shellcheck >/dev/null; then echo "Running [shellcheck]..."; shellcheck await-*.sh; fi
+  - if command -v shellcheck >/dev/null; then echo "Running [shellcheck]..."; shellcheck -e SC2059 await-*.sh; fi
   - bash tests/test-all-travis.sh
