--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
     - {os: osx, env: [TEST_SHELL="sh"]}
     - {os: osx, env: [TEST_SHELL="ksh"]}
     - {os: osx, env: [TEST_SHELL="zsh"]}
-    - {os: windows, env: [TEST_SHELL="bash"]}
+    #- {os: windows, env: [TEST_SHELL="bash"]}
 
 before_script:
   - git clone https://github.com/bats-core/bats-core.git /tmp/bats-repo
